[tool.poetry]
name = "flake8-import-conventions"
version = "0.0.1"
description = "An opinionated plugin for Flake8 on how certain packages should be imported or aliased."
authors = ["João Palmeiro <joaommpalmeiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
