[tool.poetry]
name = "flake8-import-conventions"
version = "0.0.1"
description = "An opinionated plugin for Flake8 on how certain packages should be imported or aliased."
authors = ["João Palmeiro <joaommpalmeiro@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["flake8", "linter", "qa", "import", "flake8-plugin", "code quality"]

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^3.0", python = "<3.8"}
flake8 = "^3.0.0"
attrs = "^20.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
bandit = "^1.7.0"
isort = "^5.7.0"

[tool.poetry.plugins."flake8.extension"]
IC = "flake8_import_conventions.plugin:Plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
