[tool.poetry]
name = "flake8-import-conventions"
version = "0.1.0"
description = "An opinionated plugin for Flake8 on how certain packages should be imported or aliased."
authors = ["João Palmeiro <joaopalmeiro@proton.me>"]
license = "MIT"
readme = "README.md"
keywords = ["flake8", "linter", "qa", "import", "flake8-plugin", "code quality"]
packages = [{ include = "flake8_import_conventions" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = ">=5"
attrs = "^22.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^23.1.0"
bandit = "^1.7.4"
pytest = "^7.2.1"
isort = "^5.11.5"
tomark = "^0.1.4"

[tool.poetry.plugins."flake8.extension"]
IC = "flake8_import_conventions:Plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
